스트레스테스트용 더미클라 제작중
- 가능한기능

1. connect
2. 로그인 패킷 전송

이후 기능은 주말중으로 추가, 테스트 예정

--- a/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj.filters
+++ b/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj.filters
@@ -215,6 +215,9 @@
     <ClCompile Include="UI.cpp">
       <Filter>Engine\Framework</Filter>
     </ClCompile>
+    <ClCompile Include="Send_Packet.cpp">
+      <Filter>Client\Network</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Graduation_Client.rc">
