--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
@@ -143,5 +143,8 @@
     <ClCompile Include="Server_Timer.cpp">
       <Filter>소스 파일\00 Main\Session</Filter>
     </ClCompile>
+    <ClCompile Include="Server_ProcessPacket_StressTest.cpp">
+      <Filter>소스 파일\00 Main\Packet</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
