.gitignore 에 Sound/ 추가 Sound파일은 따로 관리 로그인창, 방선택&대기실, 커마창 브금 수정

--- a/.gitignore
+++ b/.gitignore
@@ -292,6 +292,9 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 
+# Sound Files
+Sound/
+
 ### VisualStudio Patch ###
 # By default, sensitive information, such as encrypted password
 # should be stored in the .pubxml.user file.
